--- a/package.json
+++ b/package.json
@@ -1,6 +1,1 @@
-{"name":"preentrega-3",
-
-  "dependencies": {
-    "bootstrap": "^5.3.3"
-  }
-}
+{"name":"preentrega-3","dependencies":{"bootstrap":"^5.3.3","bootstrap-icons":"^1.11.3"}}
